Fixed an arrow on promo card not being aligned to the right side.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/navigation-card/navigation-card.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/02-molecules/navigation-card/navigation-card.scss
@@ -67,6 +67,10 @@
       }
     }
 
+    #{$root}__content {
+      flex-grow: 1;
+    }
+
     #{$root}__title {
       @include ct-typography('heading-4');
     }
